logs/Slang/generated/hdlconv/hdlconvertor_p95.sv.log
name: hdlconvertor_p95
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p95.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p95.sv:5:1: error: expected member
interconnect [0:1] iBus;
^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p95.sv:14:9: error: 'realNet' is not a type
(output realNet out);
        ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p95.sv:16:14: error: language feature not yet supported
module rlMod(input interconnect [0:1] iBus);
             ^~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p95.sv:16:39: error: variable port 'iBus' cannot have direction inout
module rlMod(input interconnect [0:1] iBus);
                                      ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p95.sv:17:1: error: unknown module 'lMod'
lMod l1(iBus[0]);
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p95.sv:18:1: error: unknown module 'rMod'
rMod r1(iBus[1]);
^~~~
